<resources>
    <string name="app_name">TinyMatic</string>
    <string name="refresh_successful">Synchronization successful</string>
    <string name="refresh_failed">Synchronization not successful</string>
    <string name="first_start_title">Welcome to TinyMatic!</string>
    <string name="changelog_title">Changes in this Version</string>
    <string name="rooms">Rooms</string>
    <string name="favs">Favourites</string>
    <string name="categories">Categories</string>
    <string name="scripts">Programs</string>
    <string name="channels">Channels</string>
    <string name="datapoints">Datapoints</string>
    <string name="variables">System Variables</string>
    <string name="programs">Programs</string>
    <string name="select_icon_internal">Select Icon</string>
    <string name="select_icon_external">Select Icon from Device</string>
    <string name="remove_icon">Remove Icon</string>
    <string name="email">Send Email</string>
    <string name="unsupported">Not support, click here to send a request</string>
    <string name="unsupported_message">This device ist not supported (yet). If you like this device to be supported, please use the button below to send a email that will include diagnostic information about the device.</string>
    <string name="add_favs">Add to Quick Access</string>
    <string name="rem_favs">Remove from Quick Access</string>
    <string name="refresh_db">Refresh Database</string>
    <string name="refresh_cancel">Do you want to cancel the synchronization ?</string>
    <string name="sync_running">Sync is running..</string>
    <string name="db_refresh">Refreshing Database…</string>
    <string name="wait_for_refresh">Please wait for the refresh to finish and try again</string>
    <string name="virtual_remote">Virtual Remote</string>
    <string name="notifications">Notifications</string>
    <string name="protocol">Protocol</string>
    <string name="cleaning_db">Cleaning DB</string>
    <string name="update_stop">Stopping Update Service</string>
    <string name="update1_3">Update Service Start 1/3</string>
    <string name="update2_3">Update Service Start 2/3</string>
    <string name="update3_3">Update Service Start 3/3</string>
    <string name="update_service_active">Enabled</string>
    <string name="update_service_error">Error</string>
    <string name="update_service">Update Service</string>
    <string name="update_service_started">Started</string>
    <string name="next_update">Next Update</string>
    <string name="display_author"> © Philipp Ebert 2018</string>
    <string name="help">Help</string>
    <string name="configuration">Settings</string>
    <string name="battery_saving_enabled_description">If you encounter issues with background synchronization, please add a battery saving exception in the settings of your phone.</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="short_click">Short</string>
    <string name="long_click">Long</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="open">Open</string>
    <string name="run_program">Run</string>
    <string name="activate">Send Activation</string>
    <string name="opened">Open</string>
    <string name="tilted">Tilted</string>
    <string name="closed">Closed</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="smoke">Smoke</string>
    <string name="no_smoke">No Smoke</string>
    <string name="rain">Rain</string>
    <string name="no_rain">No Rain</string>
    <string name="temperature">Temperature</string>
    <string name="mode">Mode</string>
    <string name="mode_auto">Auto</string>
    <string name="mode_manu">Manual</string>
    <string name="mode_lowering">Eco</string>
    <string name="mode_boost">Boost</string>
    <string name="gallery_title">Select an Icon</string>
    <string name="config_title">Settings</string>
    <string name="full_refresh">Full Synchronization</string>
    <string name="full_refresh_description">Run this after new devices are installed</string>
    <string name="server_address">Server Address</string>
    <string name="enter_ip">Enter the CCU IP Address</string>
    <string name="default_tab">First screen</string>
    <string name="app_settings">User Interface Settings</string>
    <string name="reset_favs">Reset Quick Access</string>
    <string name="reset_favs_sum">Delete all entries</string>
    <string name="reset_icons">Reset Custom Icons</string>
    <string name="reset_icons_sum">Delete all custom icons</string>
    <string name="syncAtStart">Synchronize at Startup</string>
    <string name="syncProtocol">Synchronize Protocol</string>
    <string name="syncProtocolDesc">Use on CCU2 only</string>
    <string name="showNotifications">Show Notifications</string>
    <string name="showErrorMessages">Show error messages</string>
    <string name="hideNotVisible">Omit hidden entries</string>
    <string name="disableNotOperate">Lock disabled devices</string>
    <string name="hideNotVisibleDesc">Hide entries that are not marked as visible on the CCU</string>
    <string name="disableNotOperateDesc">Lock entries that are not marked as controllable on the CCU</string>
    <string name="mhm_enable_title">Enable</string>
    <string name="mhm_enable_text">Enable CloudMatic</string>
    <string name="username">Username</string>
    <string name="mhm_username_desc">The user credentials used for the web portal must match those used for remote CCU access.</string>
    <string name="password">Password</string>
    <string name="mhm_id">CloudMatic-ID</string>
    <string name="yousure">Are you sure ?</string>
    <string name="update_enable_text">Only Suited for devices with a PERMANENT wifi connection to the home network. Warning: May affect CCU stability if used improperly!</string>
    <string name="enable_periodic_updates">Periodic Updates</string>
    <string name="periodic_updates">Synchronization</string>
    <string name="syncOnFailureDesc">Try to synchronize again if a failure occurs</string>
    <string name="syncOnFailure">Try again on failure</string>
    <string name="update_interval">Synchronization Interval</string>
    <string name="periodic_datapoints_note">Not needed if Update Service is active</string>
    <string name="profile">Profile</string>
    <string name="profiles">Profiles</string>
    <string name="profile_saved">Profile saved:</string>
    <string name="advanced_network">Advanced Network Security</string>
    <string name="use_https">Use HTTPS</string>
    <string name="use_https_desc">Is activated for local and remote connections. May cause synchronization errors.</string>
    <string name="remote_access">Remote access</string>
    <string name="use_remote_desc">Please verify that these settings are correct. For further information please see the Support Center in the Help section</string>
    <string name="use_remote">Use Remote CCU</string>
    <string name="remote_ccu">Remote CCU IP</string>
    <string name="remote_ccu_desc"></string>
    <string name="use_remote_port">Use Remote Port</string>
    <string name="remote_port">Remote Port</string>
    <string name="grid_break_limit_desc">Break tablet view into to two colums if bigger than this</string>
    <string name="grid_break_limit">Number of Elements for two Columns</string>
    <string name="useDarkTheme">Use Dark Theme</string>
    <string name="quit">Quit</string>
    <string name="licence_information">Licence Information</string>
    <string name="unlock_app">Unlock</string>
    <string name="child_protection">Parental Controls</string>
    <string name="password_new">Choose password</string>
    <string name="default_password">Default password: test</string>
    <string name="automation">Automation</string>
    <string name="backup">Backup</string>
    <string name="backup_export">Export backup</string>
    <string name="backup_import">Import backup</string>
    <string name="backup_export_sum">Export to /HomeDroidBackup/</string>
    <string name="backup_import_sum">Import from /TinyMaticBackup/</string>
    <string name="reset_settings">Reset all settings</string>
    <string name="hide_unsupported">Hide unsupported devices</string>
    <string name="legacy_layout">Legacy Tablet Layout</string>
    <string name="sort_by_name">Sort entries by name</string>
    <string name="add_layer">Add Layer</string>
    <string name="toggle_creation">Creation Mode</string>
    <string name="set_background">Select Background</string>
    <string name="rename_layer">Rename Layer</string>
    <string name="delete_layer">Delete Layer</string>
    <string name="set_default_layer">Set Default Layer</string>
    <string name="immersive_mode">Immersive Mode</string>
    <string name="layer_mode_minimal">Compact Layer Mode</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="enable_update_service">Enable Update Service</string>
    <string name="wizard_tutorial_intro">TinyMatic allows you to control your HomeMatic System. To do so, it requires the XML-API Addon to be installed on the HomeMatic CCU.\n\nPlease install the XML-API Addon before you proceed.</string>
    <string name="welcome_to_homedroid">Welcome to TinyMatic!</string>
    <string name="help_goto_support_center">If you have a question or suggestion to improve the app, please visit the support center</string>
    <string name="help_support_center">Support Center</string>
    <string name="help_goto_email">If you can not find an answer there, please write an email to support@tinymatic.de</string>
    <string name="changelog">Changelog</string>
    <string name="database_status">Database Status</string>
    <string name="auto_switch_network_mode">Local Wifi Detection</string>
    <string name="auto_switch_network_mode_desc">Switch to local Wifi automatically</string>
    <string name="select_wifi">Select Home Wifi network</string>
    <string name="detectUnrenamedChannelsDesc">Replace channel name with device name if it was not renamed</string>
    <string name="detectUnrenamedChannels">Replace channel names with device names</string>
    <string name="pref_enable_http_auth_title">Enable Http Authentication</string>
    <string name="pref_enable_http_auth_desc">Must be enabled on CCU first</string>
    <string name="prefs_enable_client_auth_title">Enable Client Cert Auth</string>
    <string name="prefs_client_cert_path">Client Cert Path</string>
    <string name="prefs_client_cert_desc">Name of Cert in SD-Card Root, for example: \n \'client.p12\'</string>
    <string name="syncOnHomeWifiOnly">Only sync in Home Wifi Network</string>
    <string name="network">Network Settings</string>
    <string name="select_orientation">Select Orientation</string>
    <string name="sysvar_quickaccess">Quick actions for system variables</string>
    <string name="widget_text_size">Widget text size</string>
    <string name="experimental">Experimental Settings</string>
    <string name="vpn_settings">VPN Settings</string>
    <string name="deactivate_background_sync">Deactivate background sync</string>
    <string name="deactivate_background_sync_desc">Only synchronize when app is active</string>
    <string name="menu_entries">Customize navigation menu</string>
    <string name="help_community">You can also find help in the HomeMatic forum community: https://bit.ly/2NNYcIU</string>
    <string name="fix_wifi">Grant location access</string>
    <string name="wifi_fix_explanation">Required for access to WIFI ID</string>
    <string name="ventilate">Ventilate</string>
    <string name="stop">Stop</string>
    <string name="backup_folder_title">Pick or Create Backup Directory</string>
    <string name="backup_folder_summary">To restore backups created on old app versions, pick \"HomeDroidBackup\"</string>
</resources>