<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:minWidth="@dimen/dialog_btn_min_width"
    android:orientation="vertical"
    android:padding="8dp">

    <Button
        android:id="@+id/button_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close" />


    <Button
        android:id="@+id/button_air"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ventilate"  />

    <Button
        android:id="@+id/button_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open"  />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"  />

</LinearLayout>